syntax = "proto3";

package proto;
option go_package = "./;proto";

import "AbilityEmbryo.proto";

message AbilityControlBlock {
  repeated AbilityEmbryo ability_embryo_list = 1;
}
