syntax = "proto3";

package proto;
option go_package = "./;proto";

message AbilityEmbryo {
  uint32 ability_id = 1;
  fixed32 ability_name_hash = 2;
  fixed32 ability_override_name_hash = 3;
}
