syntax = "proto3";

package proto;
option go_package = "./;proto";


message AvatarUpgradeReq {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    IS_ALLOW_CLIENT = 1;
    CMD_ID = 1680;
  }

  uint32 item_id = 9;
  uint32 count = 12;
  uint64 avatar_guid = 14;
}
