syntax = "proto3";

package proto;
option go_package = "./;proto";

import "Vector.proto";

message ChangeAvatarReq {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    IS_ALLOW_CLIENT = 1;
    CMD_ID = 1662;
  }

  uint64 guid = 5;
  uint32 skill_id = 11;
  bool is_move = 7;
  Vector move_pos = 9;
}
