syntax = "proto3";

package proto;
option go_package = "./;proto";


message ChangeMpTeamAvatarRsp {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 1617;
  }

  int32 retcode = 7;
  repeated uint64 avatar_guid_list = 3;
  uint64 cur_avatar_guid = 8;
}
