syntax = "proto3";

package proto;
option go_package = "./;proto";


message ChooseCurAvatarTeamRsp {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 1673;
  }

  int32 retcode = 7;
  uint32 cur_team_id = 4;
}
