syntax = "proto3";

package proto;
option go_package = "./;proto";


message SetUpAvatarTeamRsp {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 1744;
  }

  int32 retcode = 1;
  uint32 team_id = 2;
  repeated uint64 avatar_team_guid_list = 3;
  uint64 cur_avatar_guid = 4;
}
